--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -40,12 +40,12 @@ jobs:
 
     - name: Build with Gradle Wrapper
       id: package
-      run: ./gradlew packageApp
+      run: ./gradlew createDistributable
 
     - uses: actions/upload-artifact@v3
       with:
         name: ${{ matrix.os }}
-        path: build/releases
+        path: build/compose/binaries/main/app
 
     # NOTE: The Gradle Wrapper is the default and recommended way to run Gradle (https://docs.gradle.org/current/userguide/gradle_wrapper.html).
     # If your project does not have the Gradle Wrapper configured, you can use the following configuration to run Gradle with a specified version.
