--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
-        java-version: '19'
+        java-version: '17'
         distribution: 'corretto'
 
     # Configure Gradle for optimal use in GiHub Actions, including caching of downloaded dependencies.
@@ -40,7 +40,7 @@ jobs:
 
     - name: Build with Gradle Wrapper
       id: package
-      run: ./gradlew createDistributable
+      run: ./gradlew createReleaseDistributable
 
     - uses: actions/upload-artifact@v3
       with:
@@ -69,7 +69,7 @@ jobs:
     - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
-        java-version: '19'
+        java-version: '17'
         distribution: 'corretto'
 
     # Generates and submits a dependency graph, enabling Dependabot Alerts for all project dependencies.
