Further attempt to repair action.

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -14,21 +14,23 @@ on:
 
 jobs:
   prepareRelease:
-    - name: Create release
-      id: create_release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
-      with:
-        tag_name: ${{ github.ref }}
-        release_name: Release ${{ github.ref }}
-        draft: true
-        prerelease: false
-
+    outputs:
+      id: ${{ steps.createRelease.outputs.id }}
+      upload_url: ${{ steps.createRelease.outputs.upload_url }}
+    steps:
+      - name: Create Release
+        id: createRelease
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          draft: true
+          prerelease: false
 
   build:
-    needs: [ create_release ]
-    id: build
+    needs: [ prepareRelease ]
     strategy:
       matrix:
         os: [ ubuntu-latest, windows-latest, macos-latest ]
@@ -66,11 +68,11 @@ jobs:
   finalizeRelease:
     name: Create Release
     runs-on: ubuntu-latest
-    needs: [ create_release, build ]
+    needs: [ prepareRelease, build ]
     steps:
       - name: Publish release
         uses: StuYarrow/publish-release@v1.1.2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          id: ${{ jobs.create_release.outputs.id }}
+          id: ${{ jobs.prepareRelease.outputs.id }}
