--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -14,6 +14,8 @@ on:
 
 jobs:
   prepareRelease:
+    permissions:
+      contents: write
     runs-on: ubuntu-latest
     outputs:
       id: ${{ steps.createRelease.outputs.id }}
@@ -21,12 +23,8 @@ jobs:
     steps:
       - name: Create Release
         id: createRelease
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+        uses: softprops/action-gh-release@v2
         with:
-          tag_name: ${{ github.ref_name }}
-          release_name: Release ${{ github.ref_name }}
           draft: true
           prerelease: false
 
