Maybe now the action is fixed.....

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -64,7 +64,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ needs.prepareRelease.outputs.upload_url }}
-          asset_path: ./build/distributions/server-host-${{ github.ref }}.zip
+          asset_path: ./build/distributions/server-host-${{ github.ref_name }}.zip
           asset_name: ${{ matrix.os }}.zip
           asset_content_type: application/zip
 
